# opendb_selfhost_modules

./: .dockerignore  .gitignore  GMV_Campaign_creative_detail.json  GMV_Campaign_product_detail_v2.json  debug_data.json  docker-command  docker-compose.yml  docker-entrypoint.sh  dockerfile  jest.config.js  package-lock.json  package.json  runFacebookTest.js  sample_data.json
.github/workflows/: test.yml
gmv_max_server/: .dockerignore  celery_worker.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
gmv_max_server/models/: schemas.py
gmv_max_server/services/: exceptions.py
gmv_max_server/services/database/: mongo_client.py
gmv_max_server/services/gmv/: campaign_creative_detail.py  campaign_product_detail.py  gmv_reporter.py
gmv_max_server/services/rate_limiter/: rate_limiter.py
gmv_max_server/services/sheet_writer/: gg_sheet_writer.py
gmv_max_server/static/: index.html  script.js  style.css
gmv_max_server/utils/: utils.py
output/: pancake_data.json  pancake_data_1764256784663.json  pancake_data_1764257057818.json  test_results_1764256784681.json  test_results_1764257057833.json
prisma/: schema.prisma
sample_data/gmv/: GMV Live Campaign Performance.json  GMV_All_Campaign_Performance.json  GMV_Live_Campaign_Performance.json  GMV_Product_Campaign_Performance.json
src/: index.js  schedule-entry.js
src/api/: routes.js  server.js
src/core/: jobQueue.js  scheduleTrigger.js  schedulerWatchdog.js  taskProcessor.js
src/db/: client.js  dataWriter.js
src/utils/: array_utils.js  date_utils.js  sleep.js  (+4 more)
test/: sample.test.js
(+115 files in other folders)
