[project]
name = "tiktok-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "fastapi-cors>=0.0.6",
    "gevent>=25.9.1",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "pymongo>=4.15.2",
    "pyngrok>=7.4.0",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.36.0",
]
